Minor top bar overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -489,7 +489,7 @@ div.problem-container {
         margin-top: 5px;
         margin-left: 15px;
         margin-right: 15px;
-        width: 500px
+        width: 400px
     }
     .google-assignment-name {
         line-height:2;
@@ -609,7 +609,7 @@ div.problem-container {
         margin-top: 5px;
         margin-left: 15px;
         margin-right: 15px;
-        width: 320px
+        width: 270px
     }
     .google-assignment-name {
         max-width: 200px
